# LocalOuvert

./: README.md  pyproject.toml
scripts/utils/: psql_connector.py
