[project]
name = "localouvert"
version = "0.1.0"
description = "analyser la transparence des collectivités locales concernées par la loi \"République Numérique\""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.30.0)",
    "pandas (>=2.1.4)",
    "xlrd (>=2.0.1)",
    "matplotlib (>=3.7.1)",
    "chardet (>=5.1.0)",
    "openpyxl (>=3.1.2)",
    "pyyaml (>=6.0)",
    "unicodecsv (>=0.14.1)",
    "unidecode (>=1.3.7)",
    "python-dotenv (>=1.0.0)",
    "sqlalchemy (>=2.0.24)",
    "tqdm (>=4.66.1)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
